# kovalsk-e

./: .gitignore  README.md  pyproject.toml  settings.toml
core/modules/seu_silva/: caixa_da_gambiarra_diversa.py  crop_stickers_from_sheet.py
core/modules/warren/: test.py
core/warren/: test.py
